[gd_scene load_steps=2 format=2]

[ext_resource path="res://Administration/Scripts/SkillsManager.gd" type="Script" id=1]

[node name="SkillsMan" type="Node"]
script = ExtResource( 1 )

[node name="Cooldown1" type="Timer" parent="."]
one_shot = true

[node name="Cooldown2" type="Timer" parent="."]
one_shot = true

[node name="Cooldown3" type="Timer" parent="."]
one_shot = true

[node name="Cooldown4" type="Timer" parent="."]
one_shot = true

[node name="DamageBoostDur" type="Timer" parent="."]
one_shot = true

[node name="BlockDuration" type="Timer" parent="."]
one_shot = true

[node name="ClusterDuration" type="Timer" parent="."]
one_shot = true

[node name="SlowDuration" type="Timer" parent="."]
one_shot = true

[node name="ImpulseDuration" type="Timer" parent="."]
one_shot = true

[node name="Duration1" type="Timer" parent="."]
one_shot = true

[node name="Duration2" type="Timer" parent="."]
one_shot = true

[node name="Duration3" type="Timer" parent="."]
one_shot = true

[node name="Duration4" type="Timer" parent="."]
one_shot = true
